# tutorials

2024-eScience24-acc/: README.md
2024-eScience24-acc/handson/: README
2024-eScience24-acc/handson/session_1/: README.md  loop_gpu_full.cpp  loop_gpu_managed.cpp  loop_gpu_slow.cpp  loop_omp.cpp  loop_serial.cpp  mix_gpu_managed.cpp  mix_omp.cpp  possible_output.txt
2024-eScience24-acc/handson/session_2/: README.md  block_gpu_func.cpp  block_gpu_func_ext.cpp  dyn_cpu.cpp  dyn_gpu.cpp  loop_cpu_func.cpp  loop_cpu_func_ext.cpp  loop_gpu_func.cpp  loop_gpu_func_ext.cpp  possible_output.txt  vector_cpu.cpp  vector_gpu.cpp  vector_gpu_managed.cpp
2024-eScience24-acc/handson/session_3/: CMakeLists.txt  README.md  kokkos_install.txt  loop_c17.cpp  loop_c17_serial.cpp  loop_kokkos.cpp  possible_output.txt  vector_transform.cpp
2024-eScience24-acc/handson/session_4/: README.md  fft_batch.cpp  fft_gpu.cpp  fft_omp.cpp  fft_serial.cpp  fftw3_install.txt  possible_output.txt
